<resources>
    <string name="app_name">Playlist Maker</string>
    <!-- Поиск -->
    <string name="search">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_problems">Проблемы со связью</string>
    <string name="connection_problems_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <!-- Настройки -->
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_default_email">kovalevake@ya.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <!-- Плеер -->
    <string name="song_length">Длительность</string>
    <string name="album_name">Альбом</string>
    <string name="song_year">Год</string>
    <string name="song_genre">Жанр</string>
    <string name="song_origin">Страна</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <!-- Медиатека -->
    <string name="library">Медиатека</string>
    <!-- Избранное -->
    <string name="favourite_tracks">Избранные треки</string>
    <string name="library_empty">Ваша медиатека пуста</string>
    <!-- Плейлисты -->
    <string name="create_playlist">Новый плейлист</string>
    <string name="library_no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="playlists">Плейлисты</string>
    <!-- Создать плейлист -->
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_button">Создать</string>
    <!-- Создать плейлист -->
    <string name="edit">Редактировать</string>
    <string name="save_button">Сохранить</string>
    <!-- Меню плейлиста -->
    <string name="share2">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="two">%d трека</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutes_count">
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>