<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BlueLinearLayout" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/menu_primary_margin" >

        <TextView
            android:text="@string/app_name"
            style="@style/ToolbarTextView"/>

    </LinearLayout>

    <Button
        android:id="@+id/searchButton"
        android:layout_margin="@dimen/menu_primary_margin"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        style="@style/MainMenuButton" />

    <Button
        android:id="@+id/libraryButton"
        android:layout_marginHorizontal="@dimen/menu_primary_margin"
        android:text="@string/library"
        app:icon="@drawable/ic_library"
        style="@style/MainMenuButton" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_margin="@dimen/menu_primary_margin"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        style="@style/MainMenuButton" />

</LinearLayout>