<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/backArrowSettings"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/toolbar_primary_margin"
            android:src="@drawable/ic_arrow_back"
            android:background="@color/white" />

        <TextView
            android:text="@string/settings"
            android:textColor="@color/main_font_color"
            style="@style/ToolbarTextView" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        style="@style/SettingsFrameLayout" >

        <TextView
            android:text="@string/dark_theme"
            style="@style/MenuItemTextView" />

        <Switch
            android:id="@+id/switchSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            />

    </FrameLayout>

    <FrameLayout
        style="@style/SettingsFrameLayout" >

        <TextView
            android:text="@string/share"
            style="@style/MenuItemTextView" />

        <ImageButton
            android:id="@+id/shareSettings"
            android:src="@drawable/ic_share_button"
            style="@style/MenuButton" />

    </FrameLayout>

    <FrameLayout
        style="@style/SettingsFrameLayout" >

        <TextView
            android:text="@string/support"
            style="@style/MenuItemTextView" />

        <ImageButton
            android:id="@+id/supportSettings"
            android:src="@drawable/ic_support"
            style="@style/MenuButton" />

    </FrameLayout>

    <FrameLayout
        style="@style/SettingsFrameLayout" >

        <TextView
            android:text="@string/user_agreement"
            style="@style/MenuItemTextView" />

        <ImageButton
            android:id="@+id/userAgreementSettings"
            android:src="@drawable/ic_light_arrow"
            style="@style/MenuButton" />

    </FrameLayout>
</LinearLayout>