<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/WhiteLinearLayout"
    tools:context="com.example.playlistmaker.ui.settings.activity.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTextView"
        app:titleTextColor="?attr/colorOnPrimary"
        app:titleMarginTop="10dp"
        app:titleMarginBottom="@dimen/toolbar_primary_margin"
        app:titleMarginStart="@dimen/toolbar_primary_margin"
        style="@style/BackToolbarButton" />

    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/themeSwitcher"
        android:text="@string/dark_theme"
        android:layout_marginTop="@dimen/menu_vertical_margin"
        android:layout_marginBottom="@dimen/menu_primary_margin"
        android:layout_marginStart="@dimen/menu_primary_margin"
        android:layout_marginEnd="@dimen/menu_end_margin"
        app:thumbTint="@drawable/thumb"
        app:trackTint="@drawable/track"
        style="@style/MenuItemTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_share_button"
        android:paddingHorizontal="@dimen/menu_primary_margin"
        android:paddingVertical="@dimen/dimen_20"
        android:text="@string/share"
        android:textAppearance="@style/MenuItemTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_support"
        android:paddingHorizontal="@dimen/menu_primary_margin"
        android:paddingVertical="@dimen/dimen_20"
        android:text="@string/support"
        android:textAppearance="@style/MenuItemTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userAgreementSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_light_arrow"
        android:paddingHorizontal="@dimen/menu_primary_margin"
        android:paddingVertical="@dimen/dimen_20"
        android:text="@string/user_agreement"
        android:textAppearance="@style/MenuItemTextView" />

</LinearLayout>