<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/WhiteLinearLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.playlistmaker.ui.library.activity.CreatePlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/createPlaylistToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/create_playlist"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleTextAppearance="@style/ToolbarTextView"
        app:titleTextColor="?attr/colorOnPrimary"
        app:titleMarginTop="10dp"
        app:titleMarginBottom="@dimen/toolbar_primary_margin"
        app:titleMarginStart="@dimen/toolbar_primary_margin"
        style="@style/BackToolbarButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <FrameLayout
        android:id="@+id/playlistCoverImageContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="@dimen/menu_vertical_margin"
        android:background="@drawable/dash_rectangle"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/createPlaylistToolbar"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/center_guideline"
        app:layout_constraintDimensionRatio="1:1">

        <ImageView
            android:id="@+id/playlistCoverImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_image"
            android:layout_gravity="center"
            android:scaleType="centerCrop"/>
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:id="@+id/playlistNameContainer"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/center_guideline"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        style="@style/PlaylistNameTextInput" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="@dimen/button_radius"
            android:hint="@string/playlist_name"
            android:id="@+id/playlistName"
            style="@style/PlaylistNameText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_primary_margin"
        android:id="@+id/playlistDescriptionContainer"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playlistNameContainer"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        style="@style/PlaylistNameTextInput" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:padding="@dimen/button_radius"
            android:hint="@string/playlist_description"
            android:id="@+id/playlistDescription"
            style="@style/PlaylistNameText" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_32"
        android:padding="@dimen/toolbar_primary_margin"
        android:id="@+id/createPlaylistButton"
        android:text="@string/create_button"
        android:enabled="false"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        style="@style/CreatePlaylistButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>