<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/WhiteLinearLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/menu_vertical_margin" />

    <ImageButton
        android:id="@+id/menu_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/menu_end_margin"
        android:layout_marginTop="@dimen/menu_end_margin"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/BackToolbarButton" />

    <ImageView
        android:id="@+id/albumCoverImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_80"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Song name & singer -->
    <TextView
        android:id="@+id/songNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/albumCoverImage"
        style="@style/BigTextStyle"/>

    <TextView
        android:id="@+id/songArtistTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/songNameTextView"
        style="@style/SmallTextStyle"/>

    <!-- Buttons & time code -->
    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:background="@null"
        android:src="@drawable/play"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/songArtistTextView" />

    <ImageButton
        android:id="@+id/addToLibraryButton"
        android:layout_width="@dimen/refresh_button_radius"
        android:layout_height="@dimen/refresh_button_radius"
        android:layout_marginTop="@dimen/refresh_button_radius"
        android:src="@drawable/add_to_lib"
        android:background="@drawable/round_button"
        app:layout_constraintTop_toBottomOf="@id/songArtistTextView"
        app:layout_constraintEnd_toStartOf="@id/playButton"
        app:layout_constraintStart_toStartOf="@+id/left_guideline" />

    <ImageButton
        android:id="@+id/addToFavouritesButton"
        android:layout_width="@dimen/refresh_button_radius"
        android:layout_height="@dimen/refresh_button_radius"
        android:layout_marginTop="@dimen/refresh_button_radius"
        android:src="@drawable/favorite_border"
        android:background="@drawable/round_button"
        app:layout_constraintTop_toBottomOf="@id/songArtistTextView"
        app:layout_constraintStart_toEndOf="@id/playButton"
        app:layout_constraintEnd_toEndOf="@+id/right_guideline" />

    <TextView
        android:id="@+id/currentLengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:text="0:30"
        android:layout_marginTop="@dimen/padding_4"
        app:layout_constraintTop_toBottomOf="@id/playButton"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        style="@style/SmallTextStyle" />

    <!-- Details left -->
    <TextView
        android:id="@+id/songCountryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_origin"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        android:textColor="@color/icon_color"
        style="@style/SmallTextRecycler" />

    <TextView
        android:id="@+id/songGenreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_genre"
        android:layout_marginVertical="@dimen/menu_end_margin"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/songCountryTextView"
        android:textColor="@color/icon_color"
        style="@style/SmallTextRecycler" />

    <TextView
        android:id="@+id/songYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_year"
        android:layout_marginVertical="@dimen/menu_end_margin"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/songGenreTextView"
        android:textColor="@color/icon_color"
        style="@style/SmallTextRecycler" />

    <TextView
        android:id="@+id/songAlbumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_name"
        android:layout_marginVertical="@dimen/menu_end_margin"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/songYearTextView"
        android:textColor="@color/icon_color"
        style="@style/SmallTextRecycler" />

    <TextView
        android:id="@+id/songLengthTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_length"
        android:layout_marginVertical="@dimen/menu_end_margin"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintBottom_toTopOf="@id/songAlbumTextView"
        android:textColor="@color/icon_color"
        style="@style/SmallTextRecycler" />

    <!-- Details right -->
    <TextView
        android:id="@+id/songCountryValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
        style="@style/SmallTextPrimary" />

    <TextView
        android:id="@+id/songGenreValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginVertical="@dimen/menu_end_margin"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/songCountryTextView"
        style="@style/SmallTextPrimary" />

    <TextView
        android:id="@+id/songYearValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginVertical="@dimen/menu_end_margin"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/songGenreTextView"
        style="@style/SmallTextPrimary" />

    <TextView
        android:id="@+id/songAlbumValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginVertical="@dimen/menu_end_margin"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/songYearTextView"
        style="@style/SmallTextPrimary" />

    <TextView
        android:id="@+id/songLengthValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginVertical="@dimen/menu_end_margin"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintBottom_toTopOf="@id/songAlbumTextView"
        style="@style/SmallTextPrimary" />

</androidx.constraintlayout.widget.ConstraintLayout>